--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -13,3 +13,6 @@ service:
     traces:
       receivers: [otlp]
       exporters: [logging]
+    metrics:
+      receivers: [otlp]
+      exporters: [logging]
