--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,17 +24,29 @@ jobs:
           go-version: '1.24.4'
           cache: true
 
+      - name: Install Protocol Buffers compiler
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y protobuf-compiler
+
+      - name: Install dependencies and generate code
+        run: |
+          make deps
+          make generate
+
       - name: Run tests
         run: go test -v ./...
 
       - name: Build binaries
         run: |
+          # Create dist directory
+          mkdir -p dist
           # Build for multiple platforms
-          GOOS=linux GOARCH=amd64 go build -ldflags="-s -w -X main.Version=${{ github.ref_name }}" -o dist/gopherservice-linux-amd64 ./cmd/gopherservice
-          GOOS=linux GOARCH=arm64 go build -ldflags="-s -w -X main.Version=${{ github.ref_name }}" -o dist/gopherservice-linux-arm64 ./cmd/gopherservice
-          GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w -X main.Version=${{ github.ref_name }}" -o dist/gopherservice-darwin-amd64 ./cmd/gopherservice
-          GOOS=darwin GOARCH=arm64 go build -ldflags="-s -w -X main.Version=${{ github.ref_name }}" -o dist/gopherservice-darwin-arm64 ./cmd/gopherservice
-          GOOS=windows GOARCH=amd64 go build -ldflags="-s -w -X main.Version=${{ github.ref_name }}" -o dist/gopherservice-windows-amd64.exe ./cmd/gopherservice
+          GOOS=linux GOARCH=amd64 go build -ldflags="-s -w -X main.Version=${{ github.ref_name }}" -o dist/gopherservice-linux-amd64 ./cmd/server
+          GOOS=linux GOARCH=arm64 go build -ldflags="-s -w -X main.Version=${{ github.ref_name }}" -o dist/gopherservice-linux-arm64 ./cmd/server
+          GOOS=darwin GOARCH=amd64 go build -ldflags="-s -w -X main.Version=${{ github.ref_name }}" -o dist/gopherservice-darwin-amd64 ./cmd/server
+          GOOS=darwin GOARCH=arm64 go build -ldflags="-s -w -X main.Version=${{ github.ref_name }}" -o dist/gopherservice-darwin-arm64 ./cmd/server
+          GOOS=windows GOARCH=amd64 go build -ldflags="-s -w -X main.Version=${{ github.ref_name }}" -o dist/gopherservice-windows-amd64.exe ./cmd/server
 
       - name: Create checksums
         run: |
